--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 body {
-    margin: 0;
-    padding: 0;
+
 }
 
 header {
@@ -22,6 +21,14 @@ form {
     background-color: blue;
     color: white;
     margin-bottom: 5px;
+}
+
+#whole-week {
+    display: flex;
+    flex-direction: column;
+}
+
+#forecast-today {
 }
 
 #weekly-forecast {
