--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-body {
-
-}
-
 header {
     background-color: darkblue;
     text-align: center;
@@ -20,6 +16,7 @@ form {
 #submit {
     background-color: blue;
     color: white;
+    margin-top: 0.5rem;
     margin-bottom: 1rem;
 }
 
@@ -34,6 +31,7 @@ form {
 
 #weekly-forecast {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .forecast {
